syntax = "proto3";

package router;

import "github.com/longchat/longChat-Server/common/baseproto/base.proto";

service Router {
  rpc GroupUp (GroupUpReq) returns (baseproto.BaseRsp) {}
  rpc ServerUp (ServerUpReq) returns (baseproto.BaseRsp) {}
  rpc MessageIn (MessageInReq) returns (baseproto.BaseRsp) {}
}

message GroupUpReq {
	int64 GroupId=1;
	string ServerAddr=2;
}

message MessageInReq {
	int64 From=1;
	int64 To=2;
	string Content=3;
	string Type=4;
	int64 GroupId=5;
}

message ServerUpReq{
	string ServerAddr=1;
}
